--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Mi primer practica</h1><span>Hernandez Flores Hugo</span>
     <img src=".../img/developer.jpg.jfif" alt="este soy yo" width="300px" height="300px"><br>
-    <a href="lenguajes.html">Practica 1</a> <br>
+    <a href="/practica1/lenguajes.html">Practica 1</a> <br>
     <a href="/saltoDeLinea.html">Practica 2</a> <br>
     <a href="/parrafo.html">Practica 3</a> <br>
     <a href="/titulos.html">Practica 4</a> <br>
