--- a/enfasis.html
+++ b/enfasis.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="/index.html"><img src="/img/button.png" alt="return" width="24px">Regresar</a>
+    <a href="/practica1/index.html"><img src="/practica1/img/button.png" alt="return" width="24px">Regresar</a>
     <p><strong>Típos de datos</strong> en MySQL</p>
     <p><em>TEXTO</em>: Para almacenar texto usamos cadenas de caracteres. Las
         cadenas se colocan entre comillas simples. Podemos almacenar dígitos con los que no se
