--- a/hiperviculo2.html
+++ b/hiperviculo2.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Noticias</h1>
-    <a href="/hipervinculo.html">Salir</a>
+    <a href="/practica1/hipervinculo.html">Salir</a>
 </body>
 
 </html>
