--- a/parrafo.html
+++ b/parrafo.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="/index.html"><img src="/img/button.png" alt="return" width="24px">Regresar</a>
+    <a href="/practica1/index.html"><img src="/practica1/img/button.png" alt="return" width="24px">Regresar</a>
     <p>
         SQL, Structure Query Language (Lenguaje de Consulta Estructurado) es un lenguaje de programacion para trabajar
         con base de datos relacionales como MySQL, Oracle, etc. MySQL es un interpretador de SQL, es un servidor de base
