--- a/titulos.html
+++ b/titulos.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="/index.html"><img src="/img/button.png" alt="return" width="24px">Regresar</a>
+    <a href="/practica1/index.html"><img src="/practica1/img/button.png" alt="return" width="24px">Regresar</a>
     <h1>Tipos de datos en MySQL</h1>
     <h2>varchar</h2>
     <p>
