--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <h1>Mi primer practica</h1><span>Hernandez Flores Hugo</span>
-    <img src=".../img/developer.jpg.jfif" alt="este soy yo" width="300px" height="300px"><br>
+    <img src="/practica1/img/developer.jpg.jfif" alt="este soy yo" width="300px" height="300px"><br>
     <a href="/practica1/lenguajes.html">Practica 1</a> <br>
-    <a href="/saltoDeLinea.html">Practica 2</a> <br>
-    <a href="/parrafo.html">Practica 3</a> <br>
-    <a href="/titulos.html">Practica 4</a> <br>
-    <a href="/enfasis.html">Practica 5</a> <br>
-    <a href="/hipervinculo.html">Practica 6</a>
+    <a href="/practica1/saltoDeLinea.html">Practica 2</a> <br>
+    <a href="/practica1/parrafo.html">Practica 3</a> <br>
+    <a href="/practica1/titulos.html">Practica 4</a> <br>
+    <a href="/practica1/enfasis.html">Practica 5</a> <br>
+    <a href="/practica1/hipervinculo.html">Practica 6</a>
 </body>
 
 </html>
