--- a/lenguajes.html
+++ b/lenguajes.html
@@ -10,7 +10,7 @@
 
 <body>
     javascript-java-python-c++-c#
-    <a href="/index.html"><img src="/img/button.png" alt="return" width="24px">Regresar</a>
+    <a href="/practica1/index.html"><img src="/practica1/img/button.png" alt="return" width="24px">Regresar</a>
 </body>
 
 </html>
