--- a/saltoDeLinea.html
+++ b/saltoDeLinea.html
@@ -14,7 +14,7 @@
     python <br>
     c++ <br>
     c# <br>
-    <a href="./practica1/index.html"><img src="/practica1/img/button.png" alt="return" width="24px">Regresar</a>
+    <a href="/practica1/index.html"><img src="/practica1/img/button.png" alt="return" width="24px">Regresar</a>
 </body>
 
 </html>
