--- a/hipervinculo.html
+++ b/hipervinculo.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Pagina principal </h1>
-    <a href="/hiperviculo2.html">Noticias</a> <br>
+    <a href="/practica1/hiperviculo2.html">Noticias</a> <br>
     <a href="/practica1/index.html"><img src="/practica1/img/button.png" alt="return" width="24px">Regresar</a>
 </body>
 
